# ParkingFusion

./: README.md  bev_dataset.py  foot_print_dataset.py  losses.py  pyproject.toml  train_free_space.py  train_vehicle_foot_print.py
configs/: cfg_bev_freespace_gt.yaml  cfg_bev_representation_pipeline.yaml  config.py  train_config.yaml
data_representation/bev/: bev_base.py  bev_generator.py  camera_ipm_bev.py  radar_points_occupancy_bev.py  test_camera.py  test_radar.py
gt_creator/bev/: bev_foot_print_segmentation_gt.py  bev_freespace_gt.py
misc/: utils.py
models/: unet.py
